--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
        <P><h1><strong> Our impact and</strong> </br><strong> achievements</strong></h1></p>
     </div>
 <div class="part2">
- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit, molestias at dicta eaque tempore doloribus exercitationem, 
+ <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit, 
     optio natus ipsa a distinctio minus libero debitis esse id? Esse asperiores laudantium aspernatur!</p>
 
 <div class="grid-container">
