--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
     </div>
 <div class="part2">
  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit, 
-    optio natus ipsa a distinctio minus libero debitis esse id? Esse asperiores laudantium aspernatur!</p>
+    optio natus ipsa a distinctio minus libero debitis esse id? Esse aspernatur!</p>
 
 <div class="grid-container">
   <div ><h1><strong>120</strong></h1> </br> Assets under management</div>
