--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <a class="nav-link active" aria-current="page" href="index.html">Home <i class="bi bi-arrow-right"></i></a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="AboutUs.html">Benefits</a>
+                <a class="nav-link" href="About_benifits.html">Benefits</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="FeaturedIn.html">Featured In</a>
@@ -67,11 +67,11 @@
        </div>
        <div class="banner_part2">
            
-              <div class="col"><img src="./img/img1.png" alt=""></div>
-              <div class="col"><img src="./img/img2.png" alt=""></div>
-              <div class="col"><img src="./img/img3.png" alt=""></div>
-              <div class="col"><img src="./img/img4.png" alt=""></div>
-              <div class="col"><img src="./img/img5.png" alt=""></div>
+              <div class="col" id="img3_prt1"><img src="./img/img1.png" alt=""></div>
+              <div class="col" id="img3_prt2"><img src="./img/img2.png" alt=""></div>
+              <div class="col" id="img3_prt3"><img src="./img/img3.png" alt=""></div>
+              <div class="col" id="img3_prt4"><img src="./img/img4.png" alt=""></div>
+              <div class="col" id="img3_prt5"><img src="./img/img5.png" alt=""></div>
              </div>
 <div class="score">
 <div class="count1">
@@ -273,7 +273,7 @@
                     numquam iure provident voluptate esse quasi, voluptas nostrum quisquam!"
                   </p>
                   <div class="mt-5 mb-4">
-                    <img src="https://mdbcdn.b-cdn.net/img/Photos/Avatars/img%20(2).webp"
+                    <img src="./img/testimoni.png"
                       class="rounded-circle img-fluid shadow-1-strong" alt="smaple image" width="100"
                       height="100" />
                   </div>
@@ -288,7 +288,7 @@
                     elit."
                   </p>
                   <div class="mt-5 mb-4">
-                    <img src="https://mdbcdn.b-cdn.net/img/Photos/Avatars/img%20(31).webp"
+                    <img src="./img/testimoni.png"
                       class="rounded-circle img-fluid shadow-1-strong" alt="smaple image" width="100"
                       height="100" />
                   </div>
@@ -304,7 +304,7 @@
                     maiores."
                   </p>
                   <div class="mt-5 mb-4">
-                    <img src="https://mdbcdn.b-cdn.net/img/Photos/Avatars/img%20(10).webp"
+                    <img src="./img/testimoni.png"
                       class="rounded-circle img-fluid shadow-1-strong" alt="smaple image" width="100"
                       height="100" />
                   </div>
@@ -398,3 +398,4 @@
 
   </body>
 </html>
+
