--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
               </li>
             </ul>
             <form class="d-flex" role="search">
-            
-              <button class="btn btn-primary S_joi" type="submit" >Login</button>
+             <a class="btn btn-primary S_joi" type="submit"  href="form.html" >Login</a>
+         
               &nbsp&nbsp&nbsp
-              <button class="btn btn-primary S_join" type="submit">Sign Up</button>
+            <a class="btn btn-primary S_joi" type="submit"  href="form.html" >Sign Up</a>
             </form>
           </div>
         </div>
